# logwatch

./: .gitignore  CMakeLists.txt
docs/: STRUCTURE.md
include/: logwatch.h
